# clash-harmony

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  build-profile.json5  hvigorfile.ts  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: harmonyos-product-design.md  harmonyos-ui-prototype.md  mihomo-native-integration-plan.md  project-summary-2026-07-06.md
docs/prototypes/: clash-harmony-mobile-prototype.html
entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  health_monitor.cpp  health_monitor.h  mihomo_adapter.cpp  mihomo_adapter.h  napi_init.cpp  socket_protector.cpp  socket_protector.h  tun_forwarder.cpp  tun_forwarder.h
entry/src/main/cpp/fake_mihomo/: build_fake_mihomo.sh  fake_mihomo.c
entry/src/main/cpp/prebuilt/: README.md
entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5  package.json
entry/src/main/ets/components/: EmptyState.ets  ImportPanel.ets  LogLine.ets  MetricTile.ets  ModeSelector.ets  PillBadge.ets  ProfileRow.ets  ProxyNodeRow.ets  SectionTitle.ets  StatusCard.ets  StatusLine.ets  SwitchRow.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/models/: AppViewModel.ets  Profile.ets
entry/src/main/ets/pages/: DiagnosticsPage.ets  HomePage.ets  Index.ets  ProfilePage.ets  ProxyPage.ets  SettingsPage.ets
entry/src/main/ets/services/: BackupService.ets  ClashConfigParserService.ets  ClipboardImportService.ets  CoreBridgeService.ets  CoreService.ets  EnhanceService.ets  EnhanceStore.ets  GenericSubscriptionConverterService.ets  HealthMonitorService.ets  LocalFileImportService.ets  MihomoControllerService.ets  ProfileStore.ets  RuntimeConfigService.ets  RuntimeConfigVersionService.ets  SubscriptionService.ets  TcpDelayTestService.ets  TrafficPollerService.ets  VpnService.ets
entry/src/main/ets/vpnextensionability/: ClashVpnExtensionAbility.ets
entry/src/main/resources/base/element/: color.json  string.json
release/: install-to-device.sh
tests/: app-flow.test.mjs  mihomo-adapter-native.test.mjs  verify-device-mihomo.mjs  verify-fake-mihomo-prebuilt-hap.mjs  verify-hap-contents.mjs  verify-mihomo-prebuilt-abi.mjs  verify-mihomo-prebuilt-packaging.mjs
